# saltatlas

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  neo_dnnd_example.cpp
examples/datasets/: README.md  point_5-4_id.txt
include/saltatlas/dnnd/: ann_bench_data_reader.hpp  point_reader.hpp
include/saltatlas/dnnd/detail/: base_dnnd.hpp  dnnd_kernel.hpp
include/saltatlas/neo_dnnd/: backtrace.hpp  blas.hpp  builtin_function.hpp  dataset_reader.hpp  distance.hpp  float.hpp  hash.hpp  knng_const_kernel.hpp  memory.hpp  mpi.hpp  neighbor.hpp  neo_dnnd.hpp  numa.hpp  omp.hpp  pfv_replica_store.hpp  point_store.hpp  profile_db.hpp  string_cast.hpp  system.hpp  time.hpp  trace_event.hpp  utility.hpp
tools/: CMakeLists.txt
tools/hnswlib_bench/: 0001-Build-bench-program.patch  README.md  hnswlib_bench.hpp  run_hnswlib_bench.cpp
tools/shm_nng_query/: CMakeLists.txt  csr_nn_index.hpp  nn_query_parallel.hpp  packed_point_store.hpp  run_query.cpp
